--- a/assets/css/portfolio_style.css
+++ b/assets/css/portfolio_style.css
@@ -1,5 +1,6 @@
 body {
 	font-family: font-family: 'Georgia', Times, Times New Roman, serif;
+    background-color: #e4e4e4;
 }
 
 /*The header/logo/navbar css styles start here*/
@@ -48,6 +49,7 @@ section {
     width: 650px;
     float: left;
     border: 1px solid #cccccc;
+    background-color: #ffffff;
 }
 #aboutMeHeading {
 	font-size: 30px;
@@ -86,6 +88,7 @@ aside {
     margin-top: 40px;
     border: 1px solid #cccccc;
     height: auto;
+    background-color: #ffffff;
 }
 
 #connectWithMe {
