--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background-color: #e4e4e4;
 }
 
 /*The header/logo/navbar css styles start here*/
@@ -46,6 +47,7 @@ section {
     width: 650px;
     float: left;
     border: 1px solid #cccccc;
+    background-color: #ffffff;
 }
 #aboutMeHeading {
 	font-size: 30px;
@@ -55,24 +57,26 @@ section {
     margin-left: 30px;
     color: #50aba5;
 }
+
 img {
-	margin: 15px 0px 0px 30px;
+	margin: 15px 20px 0px 30px;
     height: 200px;
     width: 200px;
 }
 
+#picture {
+    float: left;
+}
+
 #first-Paragraph {
-	float: right;
     padding: 20px;
-    width: 350px;
-    display: inline-block;
-    line-height: 35px;
+    line-height: 40px;
  }
 
 #second-Paragraph {
 	padding: 0px 20px 20px 20px;
-    line-height: 35px;
-    clear: both;
+    line-height: 40px;
+    
 }
 
 /* This is the start of the aside portion
@@ -83,6 +87,7 @@ aside {
     margin-top: 40px;
     border: 1px solid #cccccc;
     height: auto;
+    background-color: #ffffff;
 }
 
 #connectWithMe {
